--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="about.html">About us</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="contact.html">Contact us</a>
@@ -36,18 +36,18 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Web Development
+                            Tutorial
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">HTML</a></li>
-                            <li><a class="dropdown-item" href="#">CSS</a></li>
-                            <li><a class="dropdown-item" href="#">bootstrap</a></li>
-                            <li><a class="dropdown-item" href="#">JavaScript</a></li>
-                            <li><a class="dropdown-item" href="#">SQL</a></li>
+                            <li><a class="dropdown-item" href="#">Learn HTML</a></li>
+                            <li><a class="dropdown-item" href="#">Learn CSS</a></li>
+                            <li><a class="dropdown-item" href="#">Learn bootstrap</a></li>
+                            <li><a class="dropdown-item" href="#">Learn JavaScript</a></li>
+                            <li><a class="dropdown-item" href="#">Learn SQL</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Laravel</a></li>
+                            <li><a class="dropdown-item" href="#">Learn Laravel</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -56,15 +56,15 @@
                             Technology
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">HTML</a></li>
-                            <li><a class="dropdown-item" href="#">CSS</a></li>
-                            <li><a class="dropdown-item" href="#">bootstrap</a></li>
-                            <li><a class="dropdown-item" href="#">JavaScript</a></li>
-                            <li><a class="dropdown-item" href="#">SQL</a></li>
+                            <li><a class="dropdown-item" href="#">Learn HTML</a></li>
+                            <li><a class="dropdown-item" href="#">Learn CSS</a></li>
+                            <li><a class="dropdown-item" href="#">Learn bootstrap</a></li>
+                            <li><a class="dropdown-item" href="#">Learn JavaScript</a></li>
+                            <li><a class="dropdown-item" href="#">Learn SQL</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Laravel</a></li>
+                            <li><a class="dropdown-item" href="#">Learn Laravel</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -73,15 +73,11 @@
                             Programming
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">C#</a></li>
-                            <li><a class="dropdown-item" href="#">C++</a></li>
-                            <li><a class="dropdown-item" href="#">Python</a></li>
-                            <li><a class="dropdown-item" href="#">Laravel</a></li>
-                            <li><a class="dropdown-item" href="#">JavaScript</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Laravel</a></li>
+                            <li><a class="dropdown-item" href="#">Learn C#</a></li>
+                            <li><a class="dropdown-item" href="#">Learn C++</a></li>
+                            <li><a class="dropdown-item" href="#">Learn Python</a></li>
+                            <li><a class="dropdown-item" href="#">Learn Laravel</a></li>
+                            <li><a class="dropdown-item" href="#">Learn JavaScript</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -172,5 +168,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
     -->
 </body>
+
+<footer class="container-fluid  fixed-bottom bg-dark my-0 py-3 text-light">
+    <p class="mb-0 text-center">© 2020-2021 CodeWithHamza.com</p>
+    <p class="mb-0 text-center">
+        <a href="#">Back to top |</a>
+        <a href="#">Privacy |</a>
+        <a href="#">Terms</a>
+    </p>
+
+</footer>
 
 </html>
