--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="logo.png">
+    <link rel="icon" type="image/png" href="logos/87252868_1534455776707839_1178978177838481408_o.jpg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -225,7 +225,7 @@
     <!--Front description -->
     <section class="jumbotron text-center" style="height: auto !important;">
         <div class="container">
-            <img src="dp.jpg" alt="logo" class="rounded-circle" width="90">
+            <img src="logos/87252868_1534455776707839_1178978177838481408_o.jpg" alt="logo" class="rounded-circle" width="90">
             <h1 class="jumbotron-heading"><span id="typed">Coding with Hamza</span><span class="typed-cursor">|</span>
             </h1>
             <p class="lead text-muted">Confused on which course to take? I have got you covered. Browse courses and find
