--- a/about.html
+++ b/about.html
@@ -28,26 +28,24 @@
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About us</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact us</a>
-                    </li>
+                   
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Web Development
+                            Tutorial
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">HTML</a></li>
-                            <li><a class="dropdown-item" href="#">CSS</a></li>
-                            <li><a class="dropdown-item" href="#">bootstrap</a></li>
-                            <li><a class="dropdown-item" href="#">JavaScript</a></li>
-                            <li><a class="dropdown-item" href="#">SQL</a></li>
+                            <li><a class="dropdown-item" href="#">Learn HTML</a></li>
+                            <li><a class="dropdown-item" href="#">Learn CSS</a></li>
+                            <li><a class="dropdown-item" href="#">Learn bootstrap</a></li>
+                            <li><a class="dropdown-item" href="#">Learn JavaScript</a></li>
+                            <li><a class="dropdown-item" href="#">Learn SQL</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Laravel</a></li>
+                            <li><a class="dropdown-item" href="#">Learn Laravel</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -56,15 +54,15 @@
                             Technology
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">HTML</a></li>
-                            <li><a class="dropdown-item" href="#">CSS</a></li>
-                            <li><a class="dropdown-item" href="#">bootstrap</a></li>
-                            <li><a class="dropdown-item" href="#">JavaScript</a></li>
-                            <li><a class="dropdown-item" href="#">SQL</a></li>
+                            <li><a class="dropdown-item" href="#">Learn HTML</a></li>
+                            <li><a class="dropdown-item" href="#">Learn CSS</a></li>
+                            <li><a class="dropdown-item" href="#">Learn bootstrap</a></li>
+                            <li><a class="dropdown-item" href="#">Learn JavaScript</a></li>
+                            <li><a class="dropdown-item" href="#">Learn SQL</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Laravel</a></li>
+                            <li><a class="dropdown-item" href="#">Learn Laravel</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -73,16 +71,15 @@
                             Programming
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">C#</a></li>
-                            <li><a class="dropdown-item" href="#">C++</a></li>
-                            <li><a class="dropdown-item" href="#">Python</a></li>
-                            <li><a class="dropdown-item" href="#">Laravel</a></li>
-                            <li><a class="dropdown-item" href="#">JavaScript</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Laravel</a></li>
+                            <li><a class="dropdown-item" href="#">Learn C#</a></li>
+                            <li><a class="dropdown-item" href="#">Learn C++</a></li>
+                            <li><a class="dropdown-item" href="#">Learn Python</a></li>
+                            <li><a class="dropdown-item" href="#">Learn Laravel</a></li>
+                            <li><a class="dropdown-item" href="#">Learn JavaScript</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
