--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="blog.html">Blog</a>
@@ -87,10 +87,9 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-secondary" type="submit">Search</button>
                 </form>
-                <div class="mx-2">
+                <div class="my-1 mx-2">
                     <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#signinModal">Login</button>
                     <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#signupModal">Sign up</button>
-
                 </div>
             </div>
         </div>
@@ -142,22 +141,39 @@
                 <div class="modal-body">
                     <form>
                         <img class="mb-4 center" src="bootstrap-logo.svg" alt="" width="72" height="57">
-                        <label for="inputEmail" class="visually-hidden">User Name</label>
-                        <input type="text" id="inputEmail" class="form-control" placeholder="User Name" required=""
-                            autofocus="">
+                        <br> <label for="validationCustomUsername" class="form-label">Username</label>
+                        <div class="input-group has-validation">
+                          <span class="input-group-text" id="inputGroupPrepend">@</span>
+                          <input type="text" class="form-control" placeholder="Enter Username" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+                          <div class="invalid-feedback">
+                            Please choose a username.
+                          </div>
+                        </div>
 
-                        <br> <label for="inputEmail" class="visually-hidden">Email address</label>
+
+                        <div class="form-group">
+                            <label for="fname">First Name</label>
+                            <input type="text" class="form-control" id="fname" placeholder="Enter your First Name"
+                                name="fname">
+                        </div>
+                        <div class="form-group">
+                            <label for="lname">Last Name</label>
+                            <input type="text" class="form-control" id="lname" placeholder="Enter your Last Name"
+                                name="lname">
+                        </div>
+
+                        <label for="inputEmail">Email address</label>
                         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
                             autofocus="">
 
-                        <br> <label for="inputPassword" class="visually-hidden">Password</label>
+                         <label for="inputPassword">Password</label>
                         <input type="password" id="inputPassword" class="form-control" placeholder="Password"
                             required="">
-                        <br><label for="inputcPassword" class="visually-hidden">Confirm Password</label>
+                        <label for="inputcPassword">Confirm Password</label>
                         <input type="password" id="inputcPassword" class="form-control" placeholder="Confirm Password"
                             required="">
                         <br><button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
-                        <p class="mt-5 mb-3 text-muted">© 2018-2020</p>
+                        <p class="mt-5 mb-3 text-muted">© 2020-2022</p>
                     </form>
                 </div>
             </div>
