--- a/about.html
+++ b/about.html
@@ -94,6 +94,16 @@
         </div>
     </nav>
 
+    <div class="alert alert-danger" style="margin-top:60px;" role="alert">
+
+        <strong>
+          
+            Welcome to Coding World!
+          
+        </strong>
+       Sorry if you are facing issues, We are still under-development.
+      </div>
+
     <div class="container" class="my-4">
         <div class="row featurette d-flex justify-content-center align-items-center">
             <div class="col-md-7">
