--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Coding World</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
