--- a/blog.html
+++ b/blog.html
@@ -4,13 +4,13 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/png" href="logo.png">
     <!-- Bootstrap CSS -->
     <link href="custom.css" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="css/navbar.css">
     <title>Coding World - Welcome to our blog, you can learn anything related to coding</title>
 </head>
 
@@ -550,9 +550,3 @@
 
 </html>
 
-<style>
-    .spacing {
-  margin-top: 5 !important;
-  margin-bottom: 5 !important;
-}
-</style>
