Minor Changes and Improvments

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/navbar.css">
 
     <title>iCodder</title>
-</head>
+</head> 
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
@@ -115,7 +115,7 @@
                     tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="photo-1548612164-97dc6e0ec9fb.jpg"
+                <img class="img-fluid" src="logos/photo-1548612164-97dc6e0ec9fb.jpg"
                     class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="img">
 
             </div>
@@ -129,7 +129,7 @@
                     tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5 order-md-1">
-                <img class="img-fluid" src="photo-1498050108023-c5249f4df085.jpg"
+                <img class="img-fluid" src="logos/photo-1498050108023-c5249f4df085.jpg"
                     class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="img">
 
             </div>
@@ -143,7 +143,7 @@
                     tellus ac cursus commodo.</p>
             </div>
             <div class="col-md-5">
-                <img class="img-fluid" src="photo-1605906964172-46a2bfeddac3.jpg"
+                <img class="img-fluid" src="logos/photo-1605906964172-46a2bfeddac3.jpg"
                     class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" alt="img">
 
             </div>
@@ -161,7 +161,7 @@
                 <div class="modal-body">
                     <div class="container">
                         <form>
-                            <img class="mb-4" src="bootstrap-logo.svg" alt="" width="72" height="57">
+                            <img class="mb-4" src="logos/bootstrap-logo.svg" alt="" width="72" height="57">
                             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
                             <label for="inputEmail" class="visually-hidden">Email address</label>
                             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
@@ -193,7 +193,7 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                        <img class="mb-4 center" src="bootstrap-logo.svg" alt="" width="72" height="57">
+                        <img class="mb-4 center" src="logos/bootstrap-logo.svg" alt="" width="72" height="57">
                         <h1 class="h3 mb-3 fw-normal">Please enter your details</h1>
                         <label for="inputEmail" class="visually-hidden">Email address</label>
                         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
