--- a/blog.html
+++ b/blog.html
@@ -109,7 +109,7 @@
                 <div class="modal-body">
                     <div class="container">
                         <form>
-                            <img class="mb-4" src="bootstrap-logo.svg" alt="" width="72" height="57">
+                            <img class="mb-4" src="logos/bootstrap-logo.svg" alt="" width="72" height="57">
 
                             <br><label for="inputEmail" class="visually-hidden">Email address</label>
                             <input type="email" id="inputEmail" class="form-control" placeholder="Email address"
@@ -143,7 +143,7 @@
                 </div>
                 <div class="modal-body">
                     <form>
-                        <img class="mb-4 center" src="bootstrap-logo.svg" alt="" width="72" height="57">
+                        <img class="mb-4 center" src="logos/bootstrap-logo.svg" alt="" width="72" height="57">
                         <br> <label for="validationCustomUsername" class="form-label">Username</label>
                         <div class="input-group has-validation">
                           <span class="input-group-text" id="inputGroupPrepend">@</span>
