--- a/contact.html
+++ b/contact.html
@@ -113,16 +113,16 @@
 
                 <!-- THE CONTACT FORM IS HERE -->
                 <h2>Contact me!</h2>
-                <form action="contact.html" method="post"><input type="hidden" name="csrfmiddlewaretoken"
+                <form action="contact.html" method="post" name="googlesheet"><input type="hidden" name="csrfmiddlewaretoken"
                         value="hMbfkg53TuAV9KPDimV8Y7eXLq6XdtxTMiZ3sdqMvz8suhdT5eRA8dc8nrdjogl5">
                     <div class="form-group">
-                        <label for="name">Your Name</label>
-                        <input type="name" class="form-control" id="name" placeholder="Enter your Name" name="name">
+                        <label for="name">Your Name *</label>
+                        <input type="name" class="form-control" id="name" placeholder="Enter your Name" name="name" required>
                     </div>
                     <div class="form-group">
-                        <label for="email">Your Email</label>
+                        <label for="email">Your Email *</label>
                         <input type="email" class="form-control" id="cemail" placeholder="Enter your Email"
-                            name="email">
+                            name="email" required>
                     </div>
                     <div class="form-group">
                         <label for="phone">Your Phone Number (with country code)</label>
@@ -130,9 +130,10 @@
                             name="phone">
                     </div>
                     <div class="form-group">
-                        <label for="description">Describe why you want to contact me for here</label>
+                        <label for="description">Describe why you want to contact me for here *</label>
                         <textarea type="text" class="form-control" id="message" placeholder="Your message"
-                            name="message"></textarea>
+                            name="message" required></textarea>
+                            <input type="time" name="timestamp" step="1">
                     </div>
                     <!-- <div class="g-recaptcha" data-sitekey="6LdvcqwUAAAAACmPYNVoiJA7D84xLSQQt5g9p10m">
                         <div style="width: 304px; height: 78px;">
@@ -147,10 +148,23 @@
                         </div><iframe style="display: none;"></iframe>
                     </div> -->
 
-                    <button type="submit" class="btn btn-danger mt-2" disabled="">Submit</button>
+                    <button type="submit" name="submit" class="btn btn-danger mt-2">Submit</button>
                 </form>
                 <hr>
             </div>
+
+            <!-- Google Sheet code is here -->
+            <script>
+                const scriptURL = 'https://script.google.com/macros/s/AKfycbwscUnBARt-3w7bRfsibmxhjI0DJV22CUBP5-fw4_D2IoHYVFVv0i6bKg/exec'
+                const form = document.forms['google-sheet']
+              
+                form.addEventListener('submit', e => {
+                  e.preventDefault()
+                  fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+                    .then(response => alert("Thanks for Contacting us..! We Will Contact You Soon..."))
+                    .catch(error => console.error('Error!', error.message))
+                })
+              </script>
             <hr>
 
             <!-- SIDE WIDGET IS HERE -->
