--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
 
                 <!-- THE CONTACT FORM IS HERE -->
                 <h2>Contact me!</h2>
-                <form action="contact.html" method="post" name="googlesheet"><input type="hidden" name="csrfmiddlewaretoken"
+                <form method="post" name="googlesheet"><input type="hidden" name="csrfmiddlewaretoken"
                         value="hMbfkg53TuAV9KPDimV8Y7eXLq6XdtxTMiZ3sdqMvz8suhdT5eRA8dc8nrdjogl5">
                     <div class="form-group">
                         <label for="name">Your Name *</label>
@@ -133,7 +133,7 @@
                         <label for="description">Describe why you want to contact me for here *</label>
                         <textarea type="text" class="form-control" id="message" placeholder="Your message"
                             name="message" required></textarea>
-               
+                
                     </div>
                     <!-- <div class="g-recaptcha" data-sitekey="6LdvcqwUAAAAACmPYNVoiJA7D84xLSQQt5g9p10m">
                         <div style="width: 304px; height: 78px;">
