--- a/contact.html
+++ b/contact.html
@@ -113,8 +113,7 @@
 
                 <!-- THE CONTACT FORM IS HERE -->
                 <h2>Contact me!</h2>
-                <form method="post" name="googlesheet"><input type="hidden" name="csrfmiddlewaretoken"
-                        value="hMbfkg53TuAV9KPDimV8Y7eXLq6XdtxTMiZ3sdqMvz8suhdT5eRA8dc8nrdjogl5">
+                <form method="post" autocomplete="off" name="googlesheet">
                     <div class="form-group">
                         <label for="name">Your Name *</label>
                         <input type="name" class="form-control" id="name" placeholder="Enter your Name" name="name" required>
