--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
 
                 <!-- THE CONTACT FORM IS HERE -->
                 <h2>Contact me!</h2>
-                <form method="post" autocomplete="off" name="googlesheet">
+                <form method="post" autocomplete="off" name="google-sheet">
                     <div class="form-group">
                         <label for="name">Your Name *</label>
                         <input type="name" class="form-control" id="name" placeholder="Enter your Name" name="name" required>
