--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,9 @@
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,800,900%7cRaleway:300,400,500,600,700"
         rel="stylesheet">
-
+    <link rel="stylesheet" href="css/custom.css">
     <title>Coding World - Welcome to our blog, you can learn anything related to coding</title>
 </head>
-
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
@@ -175,7 +174,7 @@
                             <h4>Search</h4>
                             <div>
                                 <input type="text" name="query" class="form-control">
-                                <button type="submit" class="btn btn-danger mt-2 ">Search
+                                <button type="submit" class="btn btn-danger mt-2 ">Search<span class="spinner"></span>
                                 </button>
                             </div>
                         </form>
@@ -220,7 +219,7 @@
                                     <input type="checkbox" value="remember-me"> Remember me
                                 </label>
                             </div>
-                            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+                            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in<span class="spinner"></span></button>
                             <p class="mt-5 mb-3 text-muted">© 2018-2020</p>
                         </form>
 
@@ -273,14 +272,15 @@
                         <label for="inputcPassword">Confirm Password</label>
                         <input type="password" id="inputcPassword" class="form-control" placeholder="Confirm Password"
                             required="">
-                        <br><button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+                        <br><button class="w-100 btn btn-lg btn-primary" type="submit">Sign up<span class="spinner"></span></button>
                         <p class="mt-5 mb-3 text-muted">© 2020-2022</p>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Optional JavaScript; choose one of the two! -->
+
+ 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
